endpoint courier rate
